--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "express": "^4.17.1",
     "http-server": "^0.12.3",
-    "jsdom": "^16.4.0"
+    "jsdom": "^16.4.0",
+    "puppeteer": "^5.5.0"
   }
 }
