Updates for spec-md.

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "http-server": "^0.12.3",
     "jsdom": "^16.4.0",
     "puppeteer": "^5.5.0"
+  },
+  "dependencies": {
+    "commonmark": "^0.29.3"
   }
 }
