add join, tag, and inaccessible specs

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "bin": "./bin/library",
   "scripts": {
+    "build": "graphc",
     "start": "http-server -c-1"
   },
   "keywords": [],
