--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "bin": "./bin/library",
   "scripts": {
-    "build": "graphc",
+    "build": "./build",
     "start": "http-server -c-1"
   },
   "keywords": [],
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "http-server": "^0.12.3",
     "jsdom": "^16.4.0",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "@queerviolet/speck": "queerviolet/speck"
   },
   "dependencies": {
     "commonmark": "^0.29.3"
