--- a/build
+++ b/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-echo $(dirname $0)
+cd $(dirname $0)
 spec_md="node_modules/.bin/spec-md -m biblio.json"
 $spec_md tag/v0.1/tag-v0.1.md > tag/v0.1/index.html
 $spec_md core/v0.1/core-v0.1.md > core/v0.1/index.html
