--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "@apollo/specs.apollo.dev",
   "version": "1.0.0",
   "description": "Apollo Specifications Library",
-  "main": "index.js",
-  "bin": "./bin/library",
   "scripts": {
     "build": "./build",
     "start": "http-server -c-1"
@@ -13,12 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "@queerviolet/speck": "github:queerviolet/speck",
-    "express": "^4.17.1",
-    "http-server": "^0.12.3",
-    "jsdom": "^16.4.0",
-    "puppeteer": "^5.5.0"
-  },
-  "dependencies": {
-    "commonmark": "^0.29.3"
+    "http-server": "^14"
   }
 }
