remove html files, build in netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 # Docs: https://docs.netlify.com/configure-builds/file-based-configuration/
 
 [build]
-  # This site has no build step at the moment.  We just publish the contents.
+  build = "npm run build"
   publish = "/"
 
 # Redirects are handled in the ./_redirects file, which has a simple format
