remove unused files, faster build

--- a/build
+++ b/build
@@ -10,8 +10,9 @@ for spec in $SPECS; do
   md=$spec/$base.md
   gql=$spec/$base.graphql
   if [ -e $md ]; then
-    $SPEC_MD $md > $spec/index.html
+    $SPEC_MD $md > $spec/index.html &
   fi
   echo "- **[$spec](/$spec)** ([📄 graphql]($gql))" >> __index__.md
 done
+wait $(jobs -p)
 $SPEC_MD index.md > index.html
