--- a/build
+++ b/build
@@ -1,14 +1,19 @@
 #!/bin/sh
 
 SPEC_MD=node_modules/.bin/spec-md
-SPECS=*/v*.*
+SPECS=( "${@: 1}" )
+if [ ${#SPECS[@]} -eq 0 ]; then
+  SPECS=(*/v*.*)
+fi
 
 echo > __index__.md
-for spec in $SPECS; do
+for spec in ${SPECS[*]}; do
+  if [ ! -d $spec ]; then continue; fi
   echo $spec
   base=$(dirname $spec)-$(basename $spec)
   md=$spec/$base.md
   gql=$spec/$base.graphql
+  automated_gql=$spec.graphql
   if [ -e $md ]; then
     $SPEC_MD $md > $spec/index.html &
   fi
@@ -17,7 +22,11 @@ for spec in $SPECS; do
     # to be named $spec/$name-$version. but it would be slightly
     # harder for tools to find. put them at $spec.graphql to
     # support automated discovery.
-    cp -f $gql $spec.graphql
+    cp -f $gql $automated_gql
+  else
+    if [ ! -e $automated_gql ]; then
+      echo >&2 $md not found, create it for automated schema discovery
+    fi
   fi
   echo "- **[$spec](/$spec)** ([📄 graphql]($gql))" >> __index__.md
 done
